# package_creation_tutorial

./: .buildinfo  .gitignore  genindex.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx_doc.yaml  tests.yaml
_modules/: index.html
_modules/package_creation_tutorial/: string_ops.html
src/package_creation_tutorial/: string_ops.py
tests/: test_string_ops.py
