[tool.poetry]
name = "package-creation-tutorial"
version = "0.1.0"
description = ""
authors = ["brash6 <hadrienmariaccia@gmail.com>"]
readme = "README.md"
packages = [{include = "package_creation_tutorial", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
